# drainloader

./: .gitignore  example.py  mise.toml  pyproject.toml  readme.md  walkthrough.md
.github/: CONTRIBUTING.md
.github/workflows/: checks.yml  deploy.yml  release-cli.yml  release-core.yml  test.yml
drainloader/: __init__.py  _api.py  exceptions.py  plugin.py
drainloader/plugins/: __init__.py  _registry.py  pixeldrain.py
drainloader_cli/: commands.py  io.py  main.py  utils.py
scripts/: generate-logo.py  update-tool-versions.py  validate-code-snippets.py
tests/: helpers.py
tests/live/: test_pixeldrain_live.py
tests/unit/: test_plugin_base.py
